c0.1.37 Sponsors align fix

--- a/static/style.css
+++ b/static/style.css
@@ -101,11 +101,11 @@ body {
 }
 
 .page-header-text {
-  margin-left: 100px;
+  margin-left: 10vw;
 }
 
 .page-header-text-lead {
-  margin-left: 120px;
+  margin-left: 20vw;
 }
 
 /* --------------------------------------------------------------------------- */
